@@ -151,7 +151,8 @@ public:
         pSource.put("device","test_grabber");
         pSource.put("width",320);
         pSource.put("height",240);
-        pSource.put("mode","ball");
+        //pSource.put("mode","ball");
+        pSource.put("mode","grid");
         source.open(pSource);
     }
     source.view(grabber);
